[workspace]
members = ["buildkit-proto", "buildkit-llb", "buildkit-frontend"]

[workspace.package]
edition = "2021"
version = "0.3.0"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
repository = "https://github.com/denzp/rust-buildkit"
license = "MIT/Apache-2.0"
categories = ["development-tools::build-utils", "api-bindings"]
