[package]
name = "buildkit-frontend"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

description = "Foundation for BuildKit frontends implemented in Rust"
documentation = "https://docs.rs/buildkit-frontend"
readme = "README.md"
keywords = ["buildkit", "docker", "bridge"]


[dependencies]
bytes = "1"
failure = "0.1"
anyhow = "1"
either = "1"
futures = "0.3"
libc = "0.2"
log = "0.4"
mio = "1"
pin-project = "1"
serde_json = "1"
tonic.workspace = true
tower = "0.4"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", default-features = false, features = ["io-std"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }

[dependencies.buildkit-proto]
path = "../buildkit-proto"

[dependencies.buildkit-llb]
path = "../buildkit-llb"

[dev-dependencies]
async-trait = "0.1"
env_logger = "0.10"
pretty_assertions = "1"
regex = "1"
url = "2"
tokio = { version = "1", features = ["full"] }
