[package]
name = "buildkit-llb"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

description = "Idiomatic high-level API to create BuildKit LLB graphs"
documentation = "https://docs.rs/buildkit-llb"
readme = "README.md"
keywords = ["buildkit", "docker", "llb"]


[dependencies]
either = "1"
lazy_static = "1"
log = "0.4"
prost.workspace = true
regex = "1"
serde_json = "1.0"
sha2 = "0.10"

[dependencies.buildkit-proto]
path = "../buildkit-proto"
