[package]
name = "buildkit-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

description = "Protobuf interfaces to BuildKit"
documentation = "https://docs.rs/buildkit-proto"

readme = "README.md"
keywords = ["buildkit", "docker", "protobuf", "prost"]


[dependencies]
prost = "0.6"
prost-types = "0.6"
tonic = "0.1"

[build-dependencies.tonic-build]
version = "0.1"
default-features = false
features = ["transport"]
