[package]
name = "buildkit-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

description = "Protobuf interfaces to BuildKit"
documentation = "https://docs.rs/buildkit-proto"

readme = "README.md"
keywords = ["buildkit", "docker", "protobuf", "prost"]


[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
